add option to unify tags of selected items BUGS: 449336 FIXED-IN: 7.6.0

--- a/NEWS
+++ b/NEWS
@@ -793,7 +793,7 @@ BUGFIXES:
 779 ==> 129946 - "New album" naming enhancements.
 780 ==> 131036 - Adding a checkbox to ease image selection.
 781 ==> 136902 - Show also pictures in subfolders when empty parent folder is selected.
-782 ==> 
+782 ==> 449336 - Wish: Option to unify tags of selected images.
 783 ==> 
 784 ==> 
 785 ==> 
