--- a/NEWS
+++ b/NEWS
@@ -812,7 +812,7 @@ BUGFIXES:
 798 ==> 245781 - CmakeLists.txt should permit to select export tools.
 799 ==> 090176 - KDE compatibility in digiKam Camera Operations.
 800 ==> 147986 - Download with Date & Time based renaming: hour is off by +1.
-801 ==> 
+801 ==> 426497 - Light table displays wrong picture.
 802 ==> 
 803 ==> 
 804 ==> 
