--- a/NEWS
+++ b/NEWS
@@ -815,7 +815,7 @@ BUGFIXES:
 801 ==> 426497 - Light table displays wrong picture.
 802 ==> 449476 - "Sort by Face" not working in Album view.
 803 ==> 449510 - Memory occupancy keeps going up on launching & No responded.
-804 ==> 
+804 ==> 264879 - Use KF6 source code with KDE git build source helper repository to compile AppImage bundle.
 805 ==> 
 806 ==> 
 807 ==> 
