--- a/NEWS
+++ b/NEWS
@@ -817,7 +817,7 @@ BUGFIXES:
 803 ==> 449510 - Memory occupancy keeps going up on launching & No responded.
 804 ==> 264879 - Use KF6 source code with KDE git build source helper repository to compile AppImage bundle.
 805 ==> 449287 - Use digiKam as a photo viewer with arguments.
-806 ==> 
+806 ==> 440953 - No cameras list showing on import->cameras->add camera.
 807 ==> 
 808 ==> 
 809 ==> 
