--- a/NEWS
+++ b/NEWS
@@ -828,9 +828,9 @@ BUGFIXES:
 813 ==> 418670 - Search not respecting UTF-8 charset.
 814 ==> 425168 - Cannot type accented characters via dead-keys.
 815 ==> 449559 - Initial setup import.
-816 ==> 
+816 ==> 417140 - Map panel shows white rectangle when using Google Maps.
 817 ==> 
 818 ==> 
 819 ==> 
-820 =+> 
+820 ==> 
 821 ==> 
