--- a/NEWS
+++ b/NEWS
@@ -834,7 +834,7 @@ BUGFIXES:
 819 ==> 348333 - Crashes if I click Cancel while resizing images.
 820 ==> 261778 - Improve key {unique} behavior for coupled files (jpg+raw).
 821 ==> 449733 - OpenCV undefined symbol.
-822 ==> 
+822 ==> 449756 - Tag deletion ignore lazy synchronization and are applied immediately.
 823 ==> 
 824 ==> 
 825 ==> 
