--- a/NEWS
+++ b/NEWS
@@ -835,7 +835,7 @@ BUGFIXES:
 820 ==> 261778 - Improve key {unique} behavior for coupled files (jpg+raw).
 821 ==> 449733 - OpenCV undefined symbol.
 822 ==> 449756 - Tag deletion ignore lazy synchronization and are applied immediately.
-823 ==> 
+823 ==> 449798 - Aspect Ratio Crop inconsistency?
 824 ==> 
 825 ==> 
 826 ==> 
