--- a/NEWS
+++ b/NEWS
@@ -836,7 +836,7 @@ BUGFIXES:
 821 ==> 449733 - OpenCV undefined symbol.
 822 ==> 449756 - Tag deletion ignore lazy synchronization and are applied immediately.
 823 ==> 449798 - Aspect Ratio Crop inconsistency?
-824 ==> 
+824 ==> 449815 - "Download required files" continually tries non-working mirrors, causing "Socket operation timed out".
 825 ==> 
 826 ==> 
 827 ==> 
