--- a/NEWS
+++ b/NEWS
@@ -842,6 +842,6 @@ BUGFIXES:
 826 ==> 435413 - Unwanted selection-area.
 827 ==> 449847 - Sticky selection.
 828 ==> 450153 - All groups deleted by "Extended clean up and shrink all databases".
-829 ==> 
+829 ==> 450311 - W10 - Error while trying to check for new digiKam version.
 830 ==> 
 831 ==> 
