fix urls and polish

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -295,7 +295,7 @@ The full list of mandatory (X) and optional (opt) external dependencies required
 | Qt::Svg              |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtsvg.git/                 |                                                        |                                                                                       |
 | Qt::WebEngine        |    X     | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtwebengine.git/           | To render web contents (ENABLE_QWEBENGINE=on)          | To replace Qt5::WebKitWidgets everywhere, excepted for MXE                            |
 | Qt::Core5Compat      |    X     | ---        | >= 6.2.3   | https://code.qt.io/cgit/qt/qt5compat.git/             | to compile with deprecated classes from Qt5            | For Qt6 only.                                                                         |
-| Qt::WebKitWidgets    | optional | >= 5.212   | ---        | https://code.qt.io/cgit/qt/qtwebkit.git/              | To render web contents                                 | Used with MXE only as WebEngine do not compile with MinGW. Module not ported to Qt6.  |
+| Qt::WebKitWidgets    | optional | >= 5.212   | ---        | https://code.qt.io/cgit/qt/qtwebkit.git/              | To render web contents                                 | Used with MXE only as WebEngine do not compile with MinGW. Not yet ported to Qt6.     |
 | Qt::XmlPatterns      | optional | >= 5.14    | ---        | https://code.qt.io/cgit/qt/qtxmlpatterns.git/         | To parse and validate Xml                              | Used by Rajce plugin. Module removed with Qt6.                                        |
 | Qt::X11Extras        | optional | >= 5.14    | ---        | https://code.qt.io/cgit/qt/qtx11extras.git/           | For color management support under Linux               | Module removed with Qt6.                                                              |
 | Qt::DBus             | optional | >= 5.14    | >= 6.2.3   | https://code.qt.io/cgit/qt/qtbase.git/                | Optional: only for Linux Desktop                       |                                                                                       |
@@ -332,10 +332,10 @@ The full list of mandatory (X) and optional (opt) external dependencies required
 | libqtav              | optional | >= 1.12.0  | git master | https://github.com/wang-bin/QtAV                      | To play video and audio (ENABLE_MEDIAPLAYER=on)        |                                                                                       |
 | libffmpeg            | optional | >= 3.3.x   |            | https://git.ffmpeg.org/ffmpeg.git                     | To play video and audio (ENABLE_MEDIAPLAYER=on)        | libavformat, libavutil, libavcodec used to extract video metadata                     |
 | Flex                 | optional | >= 2.5.0   |            | https://github.com/westes/flex                        | For Panorama tool                                      |                                                                                       |
-| Bison                | optional | >= 2.5.0   |            | http://www.gnu.org/software/bison/bison.html          | For Panorama tool                                      |                                                                                       |
+| Bison                | optional | >= 2.5.0   |            | https://www.gnu.org/software/bison/bison.html         | For Panorama tool                                      |                                                                                       |
 | libmesa              | optional | >= 11.0    |            | https://www.mesa3d.org/                               | For Presentation tools (Linux only)                    |                                                                                       |
-| libksane             | optional | >= 5.55.0  | ---        | https://invent.kde.org/graphics/libksane              | Digital scanner support                                |                                                                                       |
-| libmarble            | optional | >= 0.28.0  | ---        | https://invent.kde.org/education/marble               | For geolocation support                                |                                                                                       |
+| libksane             | optional | >= 5.55.0  | ---        | https://invent.kde.org/graphics/libksane              | Digital scanner support                                | Not yet ported to Qt6                                                                 |
+| libmarble            | optional | >= 0.28.0  | ---        | https://invent.kde.org/education/marble               | For geolocation support                                | Not yet ported to Qt6                                                                 |
 | libjpasper           | optional | >= 1.900.1 |            | https://github.com/jasper-software/jasper             | For JPEG-2000 support                                  |                                                                                       |
 | libeigen3            | optional | >= 3.2     |            | https://eigen.tuxfamily.org                           | For Refocus tool                                       | See if Clapack from OpenCV can be used instead                                        |
 | liblensfun           | optional | >= 0.2.8   |            | https://github.com/lensfun/lensfun                    | For LensCorrection tool                                |                                                                                       |
@@ -344,7 +344,7 @@ The full list of mandatory (X) and optional (opt) external dependencies required
 | libgomp              | optional | >= 5.0     |            | https://gcc.gnu.org/onlinedocs/libgomp                | OpenMP support for RawEngine                           |                                                                                       |
 | libmagick++          | optional | >= 6.7.0   |            | https://www.imagemagick.org                           | ImageMagick codecs support for DImg image loader       | Version >= 7.0 recommended                                                            |
 | DrMingw              | optional | >= 0.8.2   |            | https://github.com/jrfonseca/drmingw                  | Mingw crash handler (run-time deps only for windows)   |                                                                                       |
-| libx265              | optional | >= 2.2     |            | http://x265.org/                                      | For HEIC encoding support                              |                                                                                       |
+| libx265              | optional | >= 2.2     |            | https://x265.org/                                     | For HEIC encoding support                              |                                                                                       |
 |----------------------|----------|------------|------------|-------------------------------------------------------|--------------------------------------------------------|---------------------------------------------------------------------------------------|
 
 \section getsourcecode Get Source Code
