--- a/NEWS
+++ b/NEWS
@@ -10,4 +10,5 @@ BUGFIXES:
 
 001 ==> 416704 - Port digiKam to Qt6 and KF6 API.
 002 ==> 450153 - All groups deleted by "Extended clean up and shrink all databases".
-003 ==> 
+003 ==> 450518 - Crash when opening Advanced Search.
+004 ==> 
