--- a/NEWS
+++ b/NEWS
@@ -850,4 +850,5 @@ BUGFIXES:
 834 ==> 431118 - By using filters digiKam 7.1.0 is crashing at Windows10 Prof 64Bit.
 835 ==> 426086 - Tiff file reading extremely slow.
 836 ==> 450589 - "Save as": Cancelling the filename dialog does not cancel "Save as".
-837 ==> 
+837 ==> 450572 - default movie editor ?
+838 ==> 
